--- a/docker/production/docker-compose.yml
+++ b/docker/production/docker-compose.yml
@@ -3,11 +3,11 @@ web:
   dockerfile: Dockerfile
   volumes:
     - hcpl-production-assets:/app/public/assets
-    - /home/mbajur/apps/hcpl/shared:/shared
-    - /home/mbajur/apps/hcpl/shared/log:/app/log
+    - /home/mbajur/hcpl/shared:/shared
+    - /home/mbajur/hcpl/shared/log:/app/log
   # hostname: "netguru.hcpl.production.web"
   restart: always
-  env_file: /home/mbajur/apps/hcpl/shared/secrets.env
+  env_file: /home/mbajur/hcpl/shared/secrets.env
   command: bundle exec puma -C config/puma.rb
   cpu_quota: 25000
   mem_limit: 800M
@@ -23,15 +23,15 @@ web:
     - 127.0.0.1:3000:3000
 
 sidekiq:
-  build: .
-  dockerfile: docker/production/Dockerfile
+  build: ../../
+  dockerfile: Dockerfile
   cpu_quota: 100000
   mem_limit: 900M
   restart: always
-  env_file: /home/mbajur/apps/hcpl/shared/secrets.env
+  env_file: /home/mbajur/hcpl/shared/secrets.env
   volumes:
-  - /home/mbajur/apps/hcpl/shared:/shared
-  - /home/mbajur/apps/hcpl/shared/log:/app/log
+  - /home/mbajur/hcpl/shared:/shared
+  - /home/mbajur/hcpl/shared/log:/app/log
   # hostname: "netguru.hcpl.production.sidekiq"
   command: bundle exec sidekiq --config config/sidekiq.yml
   # labels:
@@ -48,11 +48,11 @@ postgres:
   environment:
     - POSTGRES_DB=hcpl
   volumes:
-    - '/home/mbajur/apps/hcpl/shared/postgres:/var/lib/postgresql/data'
+    - '/home/mbajur/hcpl/shared/postgres:/var/lib/postgresql/data'
 
 redis:
   image: redis:3.2-alpine
   ports:
     - "6379"
   volumes:
-    - '/home/mbajur/apps/hcpl/shared/redis:/var/lib/redis/data'
+    - '/home/mbajur/hcpl/shared/redis:/var/lib/redis/data'
