--- a/docker/production/Dockerfile
+++ b/docker/production/Dockerfile
@@ -38,6 +38,7 @@ EXPOSE 3000
 COPY . ./
 
 # Precompile Rails assets
+RUN node -v
 RUN SECRET_KEY_BASE=fake \
   DATABASE_URL=postgres://fake@fake:5432/fake \
   bundle exec rake assets:precompile
