--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: ruby
 rvm:
  - 2.3.3
 
+cache: bundler
+
 after_success:
   - echo $ID_RSA > config/deploy_id_rsa
-  - "bundle exec cap deploy"
+  - "bundle exec cap production deploy"
