--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,5 @@ cache: bundler
 
 after_success:
   - echo $ID_RSA > config/deploy_id_rsa
+  - cat config/deploy_id_rsa
   - "bundle exec cap production deploy"
