--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -2,7 +2,9 @@ web:
   build: .
   dockerfile: docker/production/Dockerfile
   volumes:
-    - hcpl-production-assets:/app/public/assets
+    # - hcpl-production-assets:/app/public/assets
+    - /mnt/disk/apps/hcpl/shared/public/assets:/app/public/assets
+    - /mnt/disk/apps/hcpl/shared/public/system:/app/public/system
     - /mnt/disk/apps/hcpl/shared:/shared
     - /mnt/disk/apps/hcpl/shared/log:/app/log
   restart: always
@@ -26,6 +28,8 @@ sidekiq:
   restart: always
   env_file: /mnt/disk/apps/hcpl/shared/secrets.env
   volumes:
+    - /mnt/disk/apps/hcpl/shared/public/assets:/app/public/assets
+    - /mnt/disk/apps/hcpl/shared/public/system:/app/public/system
     - /mnt/disk/apps/hcpl/shared:/shared
     - /mnt/disk/apps/hcpl/shared/log:/app/log
   command: bundle exec sidekiq --config config/sidekiq.yml
