--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,8 @@ jobs:
     docker:
       # specify the version you desire here
        - image: circleci/ruby:2.4.1-node-browsers
+         environment:
+           DATABASE_URL: postgresql://root@localhost/circle_test
 
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
