--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
       # specify the version you desire here
        - image: circleci/ruby:2.4.1-node-browsers
          environment:
-           DATABASE_URL: postgresql://root@localhost/circle_test
+           DATABASE_URL: postgresql://root@localhost:5432/circle_test
 
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
