--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,7 @@ jobs:
       # specify the version you desire here
        - image: circleci/ruby:2.4.1-node-browsers
          environment:
+           PGHOST: 127.0.0.1
            DATABASE_URL: postgresql://root@localhost:5432/circle_test
 
       # Specify service dependencies here if necessary
