--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,7 @@ jobs:
          environment:
            PGHOST: 127.0.0.1
            PGUSER: root
+           DBNAME: circle_test
            DATABASE_URL: postgresql://root@localhost:5432/circle_test
 
       # Specify service dependencies here if necessary
