--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,6 +63,10 @@ jobs:
           #                 --format progress \
           #                 "${TEST_FILES}"
 
+      - add_ssh_keys:
+          fingerprints:
+            - "4e:ed:97:ef:65:df:7f:8d:c0:9d:5f:25:12:37:01:fa"
+
       - deploy:
           name: Maybe Deploy
           command: |
