--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -2,7 +2,7 @@ web:
   build: .
   dockerfile: docker/production/Dockerfile
   volumes:
-    - hcpl-production-assets:/app/public/assets
+    # - hcpl-production-assets:/app/public/assets
     - /mnt/disk/apps/hcpl/shared/public/system:/app/public/system
     - /mnt/disk/apps/hcpl/shared:/shared
     - /mnt/disk/apps/hcpl/shared/log:/app/log
