disable cache busting on deploys

--- a/docker/production/Dockerfile
+++ b/docker/production/Dockerfile
@@ -42,7 +42,7 @@ EXPOSE 3000
 COPY . ./
 
 # Precompile Rails assets
-ARG CACHEBUST=1
+# ARG CACHEBUST=1
 RUN SECRET_KEY_BASE=fake \
   DATABASE_URL=postgres://fake@fake:5432/fake \
   bundle exec rake assets:precompile
