--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "vue": "^2.5.3",
     "vue-event-hub": "^1.0.2",
     "vue-loader": "^13.5.0",
+    "vue-moment": "^3.0.0",
     "vue-multiselect": "^2.0.6",
     "vue-resource": "^1.3.4",
     "vue-template-compiler": "^2.5.3"
