--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,13 +55,11 @@ jobs:
             mkdir /tmp/test-results
             TEST_FILES="$(circleci tests glob "spec/**/*_spec.rb" | circleci tests split --split-by=timings)"
 
-            bundle exec rspec
-
-          # bundle exec rspec --format progress \
-          #                 --format RspecJunitFormatter \
-          #                 --out /tmp/test-results/rspec.xml \
-          #                 --format progress \
-          #                 "${TEST_FILES}"
+            bundle exec rspec --format progress \
+                            --format RspecJunitFormatter \
+                            --out /tmp/test-results/rspec.xml \
+                            --format progress \
+                            "${TEST_FILES}"
 
       - add_ssh_keys:
           fingerprints:
