--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,13 +52,18 @@ jobs:
       - run:
           name: run tests
           command: |
+            curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+            chmod +x ./cc-test-reporter
+
             mkdir /tmp/test-results
             TEST_FILES="$(circleci tests glob "spec/**/*_spec.rb" | circleci tests split --split-by=timings)"
 
+            ./cc-test-reporter before-build
             bundle exec rspec --format documentation \
                               --format RspecJunitFormatter \
                               --out /tmp/test-results/rspec.xml \
                               -- $(echo "${TEST_FILES}" | sed -e 's/\n/\\n/' -e 's/ /\ /')
+            ./cc-test-reporter after-build --exit-code $EXIT_CODE
 
       - add_ssh_keys:
           fingerprints:
