--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,7 @@ jobs:
           name: Install selenium
           command: |
             sudo apt-get install python-pip python-dev build-essential -y
-            pip install mozdownload mozinstall
+            sudo pip install mozdownload mozinstall
             mozdownload --version latest --destination firefox.tar.bz2
             mozinstall firefox.tar.bz2
             wget -O geckodriver.tar.gz https://github.com/mozilla/geckodriver/releases/download/v0.18.0/geckodriver-v0.18.0-linux64.tar.gz
