--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,7 +41,7 @@ jobs:
             mozinstall firefox.tar.bz2
             wget -O geckodriver.tar.gz https://github.com/mozilla/geckodriver/releases/download/v0.18.0/geckodriver-v0.18.0-linux64.tar.gz
             gunzip -c geckodriver.tar.gz | tar xopf -
-            chmod +x geckodriver && mv geckodriver /home/ubuntu/bin/
+            chmod +x geckodriver && mv geckodriver ~/bin/
 
       - run:
           name: install dependencies
