--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,7 +41,8 @@ jobs:
             mozinstall firefox.tar.bz2
             wget -O geckodriver.tar.gz https://github.com/mozilla/geckodriver/releases/download/v0.18.0/geckodriver-v0.18.0-linux64.tar.gz
             gunzip -c geckodriver.tar.gz | tar xopf -
-            chmod +x geckodriver && mv geckodriver /usr/local/bin/
+            chmod +x geckodriver
+            sudo mv geckodriver /usr/local/bin/
             geckodriver --version
 
       - run:
