--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,7 +46,7 @@ jobs:
             geckodriver --version
 
       - run:
-          name: install dependencies
+          name: Install dependencies
           command: |
             bundle install --jobs=4 --retry=3 --path vendor/bundle
             yarn install
@@ -69,7 +69,7 @@ jobs:
 
       # run tests!
       - run:
-          name: run tests
+          name: Run tests
           command: |
             mkdir /tmp/test-results
             TEST_FILES="$(circleci tests glob "spec/**/*_spec.rb" | circleci tests split --split-by=timings)"
@@ -81,6 +81,12 @@ jobs:
                               -- $(echo "${TEST_FILES}" | sed -e 's/\n/\\n/' -e 's/ /\ /')
 
             ./cc-test-reporter after-build --exit-code $?
+
+      - run:
+          name: Run brakeman
+          command: |
+            gem install brakeman --no-ri --no-rdoc
+            brakeman -f plain
 
       - add_ssh_keys:
           fingerprints:
