--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "vue-moment": "^3.0.0",
     "vue-multiselect": "^2.0.6",
     "vue-resource": "^1.3.4",
-    "vue-template-compiler": "^2.5.3"
+    "vue-router": "^3.0.1",
+    "vue-template-compiler": "^2.5.3",
+    "vux": "^2.7.5"
   },
   "devDependencies": {
+    "less-loader": "^4.0.5",
     "pug": "^2.0.0-rc.4",
     "webpack-dev-server": "^2.9.4"
   }
