--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@rails/webpacker": "^3.0.2",
     "coffeescript": "1.12.7",
+    "less": "^2.7.3",
     "vue": "^2.5.3",
     "vue-event-hub": "^1.0.2",
     "vue-loader": "^13.5.0",
@@ -12,11 +13,13 @@
     "vue-resource": "^1.3.4",
     "vue-router": "^3.0.1",
     "vue-template-compiler": "^2.5.3",
+    "vuex": "^3.0.1",
     "vux": "^2.7.5"
   },
   "devDependencies": {
     "less-loader": "^4.0.5",
     "pug": "^2.0.0-rc.4",
+    "vux-loader": "^1.1.29",
     "webpack-dev-server": "^2.9.4"
   }
 }
